--- a/01-javascript/01-index-internal.html
+++ b/01-javascript/01-index-internal.html
@@ -9,8 +9,8 @@
 <body>
     
 
-    <script>
-        console.log("Hello World!")
-    </script>
+    
+        <h1>"Hello World!"</h1>
+        <script src="./assets/js/HOF/high-order-functions-01.js"></script>
 </body>
 </html>
