--- a/01-javascript/assets/js/HOF/high-order-functions-01.html
+++ b/01-javascript/assets/js/HOF/high-order-functions-01.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>HELLO JAVASCRIPT</h1>
+    <h2> Veysel and Murteza !</h2>
     <script src="high-order-functions-01.js">
         
     </script>
