--- a/01-javascript/assets/js/HOF/high-order-functions-01.html
+++ b/01-javascript/assets/js/HOF/high-order-functions-01.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="high-order-functions-01.css">
 </head>
 <body>
-    <h1>HELLO JAVASCRIPT</h1>
-    <h2> Veysel and Murteza !</h2>
+    <div class="mmm">
+        <h1>HELLO JAVASCRIPT</h1>
+        <h2> Veysel and Murteza !</h2>
+    </div>
+    
     <script src="high-order-functions-01.js">
         
     </script>
