--- a/01-javascript/assets/js/HOF/high-order-functions-01.html
+++ b/01-javascript/assets/js/HOF/high-order-functions-01.html
@@ -10,7 +10,7 @@
 <body>
     <div class="mmm">
         <h1>HELLO JAVASCRIPT</h1>
-        <h2> Veysel and Murteza !</h2>
+        <h2> Veysel and Murteza Bey !</h2>
     </div>
     
     <script src="high-order-functions-01.js">
